src/css/portfolio.css
/*Header*/
.header {
    text-align: center;
    font-family: "Open Sans", sans-serif;
    color: white;
    padding: 25px;
    font-size: 1.5rem;
}

.header h1 {
    font-size: 3rem;
    line-height: .75em;
}

/*Accordian*/
#accordian {
    display: flex;
    flex-direction: column;
    justify-content: center;
    justify-items: center;
    width: 90vw;
    margin: 0 auto;
    padding-top: 15px;
    padding-bottom: 150px;
}

.accordian-item {
    background-color: white;
    margin-top: 8px;
    margin-bottom: 8px;
    padding-top: 15px;
    padding-bottom: 15px;
    display: flex;
    justify-content: space-between;
    border-radius: 8px;
    flex-direction: column;
}

.accordian-item:hover {
    background-color: rgb(238, 238, 238);
}

.not-viewed {
    display: none;
}

.horizontal-flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.vertical-flex {
    display: flex;
    align-items: center;
    flex-direction: column;
}

.accordian-item svg {
    padding-right: 25px;
    fill: rgb(133, 142, 153);
    margin-top: -2px;
}

.accordian-link-text {
    padding-left: 25px;
    font-family: "Open Sans", sans-serif;
    color: rgb(133, 142, 153);
    font-weight: 700;
    font-size: 1.5rem;
}

/*Define style for currently viewed*/
.currently-viewed {
    background-color: white;
    margin-top: 8px;
    margin-bottom: 8px;
    padding-top: 15px;
    padding-bottom: 15px;
    display: flex;
    justify-content: space-between;
    border-radius: 8px;
    flex-direction: column;
    max-width: 100%;
}

.currently-viewed:hover {
    background-color: white;
}

.currently-viewed svg {
    padding-right: 25px;
    fill: rgb(86, 91, 97);
}

.currently-viewed .accordian-link-text {
    color: rgb(86, 91, 97);
}

/*Inner Accordian Text*/
.description {
    font-family: "Open Sans", sans-serif;
    font-weight: 700;
    padding-left: 45px;
    padding-top: 50px;
    padding-right: 45px;
    padding-bottom: 35px;
    font-size: 1.25rem;
}

.excerpt {
    font-family: "Open Sans", sans-serif;
    font-weight: 400;
    padding-left: 45px;
    padding-right: 45px;
}

.title {
    font-family: "Open Sans", sans-serif;
    font-weight: 700;
    padding-left: 45px;
    padding-top: 10px;
    padding-right: 45px;
    padding-bottom: 5px;
}

pre code {
    overflow-x: scroll;
    overflow-y: hidden;
    display: block;
    line-height: 1.6em;
    font-size: 15px;
    white-space: pre; 
    word-wrap: normal;
    max-width: 70vw;
    margin: 0 auto;
    padding-right: 25px;
}

#root {
    width: 85vw;
    align-self: center;
    margin: 0 auto;
}

/*GitHub Button*/
.github-button {
    display: inline-block;
    color: rgb(224, 229, 235);
    font-family: "Oswald", sans-serif;
    font-weight: 700;
    text-align: center;
    letter-spacing: 1px;
    background-color: rgb(41,45,51);
    margin-left: 50px;
    margin-bottom: 25px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: .01px;
    padding-bottom: .01px;
    width: 210px;
    border-radius: 15px;
    font-size: 1.25rem;
}

@media only screen and (min-width: 64rem) {
    .header {
        font-size: 1rem;
    }

    .header h1 {
        font-size: 3em;
    }

    #accordian {
        width: 50vw;
    }

    .accordian-item svg {
        margin-top: 0;
    }

    .accordian-link-text {
        font-size: 1rem;
    }

    pre code {
        max-width: 40vw;
        font-size: 11px;
    }

    .description {
        font-size: 1rem;
    }

    .github-button {
        font-size: 1rem;
        width: 125px;
    }

    #root {
        max-width: 45vw;
        align-self: center;
        margin: 0 auto;
    }
}

